--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - "2.7"
 
-before_install: "pip install -r requeriments.txt"
+before_install:
+  - "pip install -r requeriments.txt"
+  - "pip install coveralls"
 
-script: "python manage.py test"
+script:
+  "coverage manage.py test"
