--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
 
 
 script:
-  "coverage run manage.py test"
+  - "coverage run manage.py test"
+  - "py.test"
 
 after_script:
   "coveralls"
