--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 
 script:
-  - "coverage run manage.py test"
+  - "coverage run --source=ingreso_pacientes manage.py ingreso_pacientes"
   - "py.test"
 
 after_script:
