--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: python
 python:
-  - "2.7"
+  - 3.4
 
 before_install:
-  - "pip install -r requirements.txt"
+  - pip install -r requirements.txt
 
 
 script:
-  - "coverage run --source=ingreso_pacientes manage.py test ingreso_pacientes"
-  - "py.test"
+  - coverage run --source=ingreso_pacientes manage.py test ingreso_pacientes
+  - py.test
 
 after_script:
-  "coveralls"
+  coveralls
